--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,65 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# React Native / Expo
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Expo
+.expo/
+.expo-shared/
+dist/
+web-build/
+
+# React Native
+# OSX
+.DS_Store
+
+# Android/IntelliJ
+build/
+.idea/
+.gradle/
+local.properties
+*.iml
+*.hprof
+.cxx/
+
+# iOS
+ios/Pods/
+ios/build/
+ios/DerivedData/
+*.xcworkspace
+*.xcuserdata
+
+# Metro
+.metro-health-check*
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
+# Flipper
+ios/Pods/Flipper*
+android/app/src/debug/
+
+# Watchman
+.watchmanconfig
+
+# Bundle artifacts
+*.jsbundle
+
+# CocoaPods
+ios/Pods/
+
+# Temporary files
+*.tmp
+*.temp
+
+# React Native Debugger
+.vscode/
+
+# Expo CLI
+.expo-cli/
