--- a/finalProject/frontend/package.json
+++ b/finalProject/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -24,5 +24,13 @@
     "react-native-web": "^0.21.0",
     "react-redux": "^9.2.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-native": "^0.72.8",
+    "@types/react-redux": "^7.1.34",
+    "typescript": "^5.9.3"
+  }
 }
