--- a/finalProject/frontend/package.json
+++ b/finalProject/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@reduxjs/toolkit": "^2.11.0",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.13.2",
     "expo": "~54.0.25",
     "expo-router": "^6.0.15",
@@ -22,7 +23,8 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-web": "^0.21.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "recharts": "^3.5.1"
   },
   "private": true,
   "devDependencies": {
