updated UI, landing page, bug fixes

--- a/finalProject/frontend/app.json
+++ b/finalProject/frontend/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "frontend",
+    "name": "Budgeting for Free",
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
